<resources>
    <string name="app_name">StartUpMitra</string>
    <string name="slide_name_title">Welcome,</string>
    <string name="subText">What shall we call your start up?</string>
    <string name="name">Name</string>
    <string name="eg_98fit">eg. 98fit</string>
    <string name="pan_number">PAN Number</string>
    <string name="pan_number_hint">eg. EP*****</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="email_error">Email Error</string>
    <string name="email_errore">email error details</string>
    <string name="email_details">Email Details</string>
    <string name="name_of_startup">StartUp Name</string>
    <string name="enter_full_name">Enter the full name of your Startup</string>
    <string name="choose_industry">Choose Industry</string>
    <string name="choose_resp_industry">Choose your respective Industry</string>
    <string name="eroor">Error</string>
    <string name="choose_sector">Choose Sector</string>
    <string name="reg_no">Registration No.</string>
    <string name="not_valid">Not valid</string>
    <string name="reg_date">Registration Date</string>
    <string name="pan_no">StartUp Pan No.</string>
    <string name="enter_pan">Enter your startup pan number</string>
    <string name="enter_reg_no">Enter your Startup registration number</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_resp_category">Choose your respective category</string>
    <string name="choose_resp_sector">Choose your respective sector</string>
    <string name="enter_startup_reg">Enter Your Startup Registration No.</string>
    <string name="enter_reg_date">Enter your Startup registration Date</string>

    <string-array name="industry_items">


        <item>Advertising</item>
        <item>IT Services</item>
        <item>Healthcare and Lifesciences</item>
        <item>Aeronautics/AerospaceandDefence</item>
        <item>Agriculture</item>
        <item>AI</item>
        <item>Analytics</item>
        <item>Animation</item>
        <item>AR/VR (Augmented + Virtual Reality)</item>
        <item>Architecture/Interior Design</item>
        <item>Art and Photography</item>
        <item>Automotive</item>
        <item>Chemicals</item>
        <item>Telecommunication and Networking</item>
        <item>Computer Vision</item>
        <item>Construction</item>
        <item>Dating/Matrimonial</item>
        <item>Design</item>
        <item>Education</item>
        <item>Non- Renewable Energy</item>
        <item>Renewable Energy</item>
        <item>Green Technology</item>
        <item>Enterprise Software</item>
        <item>Events</item>
        <item>Fashion</item>
        <item>Finance Technology</item>
        <item>Food and Beverages</item>
        <item>Technology Hardware</item>
        <item>Healthcare and Lifesciences</item>
    </string-array>

    <string-array name="health_list">
        <item>Medical Devices/Biomedical</item>
        <item>Health and Wellness</item>
        <item>Pharmaceutical</item>
        <item>Biotechnology</item>
        <item>Healthcare Services</item>
        <item>Healthcare IT</item>
        <item>Healthcare Technology</item>
    </string-array>

    <string-array name="agriculture">

        <item>Dairy Farming</item>
        <item>Organic Agriculture</item>
        <item>Agri-Tech</item>
        <item>Food Processing</item>
    </string-array>

    <string-array name="it_services">

        <item>IT Consulting</item>
        <item>BPO</item>
        <item>KPO</item>
        <item>Web Development</item>
        <item>Product development</item>
        <item>Application Development</item>
        <item>Testing</item>
        <item>IT Management</item>
        <item>Project Management</item>
    </string-array>


    <string-array name="categories">
        <item>Consulting</item>
        <item>E-Commerce</item>
        <item>Consumer Internet</item>
        <item>Hyperlocal</item>
        <item>Government</item>
        <item>Marketplace</item>
        <item>Mobile</item>
        <item>Peer to Peer</item>
        <item>SaaS</item>
        <item>Sharing Economy</item>
        <item>Social Enterprise</item>
        <item>Others</item>

    </string-array>


    <string name="find_a_scheme_that_is_right_for_you">Find a scheme that is right for you</string>
    <string name="register_your_startup">Register your Start-up</string>
    <string name="News">News and Schemes around you</string>
    <string name="maps">Banks and Schemes around you</string>
    <string name="probono">Pro-Bono Service</string>
    <string name="loanRange">Loan Range: Rs</string>
    <string name="start_up_mitra">Start-Up Mitra</string>
    <string name="startup_mitra">Startup Mitra</string>
    <string name="start_up_name">Start-Up name</string>
    <string name="_98fit_pvt_ltd">98fit Pvt. ltd</string>
    <string name="qr_code">H2349</string>
    <string name="qr_code_text">QR Code</string>
    <string name="welcome_to">Welcome to</string>
    <string name="start_up_mitra_caps">START-UP MITRA</string>
    <string name="your_startup_companion">Your startup companion</string>
    <string name="sector_industry">Sector/Industry</string>
    <string name="collateral">Collateral</string>
    <string name="loan_range">Loan Range</string>
    <string name="other_info">Other Info</string>
    <string name="let_s_recommend">Let\'s Recommend</string>
    <string name="all_of_start_up_one_platform">All of Start-up, one platform</string>

    <string name="hello_there">Hello, there</string>
    <string name="what_is_you_adhaar_number">What is you aadhaar number ?</string>
    <string name="_1234_5678_9012">1234 5678 9012</string>
    <string name="skip">Skip</string>
    <string name="proceed">Proceed</string>
    <string name="string">जारी रहना</string>
    <string name="pickhindi">हिंदी</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="pick">Pick</string>
    <string name="continuee">Continue</string>
    <string name="sector">Sector</string>
    <string name="education">Education</string>
    <string name="it_services">IT Services</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="sec_agnostic">Sector-agnostic</string>
    <string name="travel">Travel &amp; tourism</string>
    <string name="energy">Energy</string>
    <string name="health">Healthcare &amp; Fitness</string>
    <string name="option">---Option--</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="marathi">मराठी</string>
    <string name="industry">Industry</string>
    <string name="password">Password</string>
    <string name="password_error">Password length should be greater than 5</string>
    <string name="password_details">Create Your Password</string>

    <string name="name_details">Enter your name</string>

    <string name="email_details_text">Enter your email address</string>
    <string name="contact">Contact No.</string>

    <string name="mobile_detail_text">Enter your mobile number</string>
>>>>>>> AviBranchTwo
</resources>
