<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true">




    <ScrollView
        android:id="@+id/profile_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/margin_5"
                android:paddingRight="@dimen/margin_20"
                android:paddingLeft="@dimen/margin_20"
                android:paddingBottom="@dimen/margin_2"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">



                <!--<TextView-->
                <!--android:id="@+id/txt_sign_up_logo"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_marginTop="@dimen/margin_10"-->
                <!--android:text="Text"-->
                <!---->
                <!--android:layout_gravity="center"-->
                <!--android:textSize="@dimen/font_18"/>-->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Contact Information"
                        android:layout_centerInParent="true"
                        android:textSize="@dimen/font_15"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <!--<ImageView-->
                    <!--android:id="@+id/img_add_image"-->
                    <!--android:layout_width="@dimen/height_100"-->
                    <!--android:layout_height="@dimen/height_100"-->
                    <!--android:src="@drawable/car"-->
                    <!--android:layout_alignParentBottom="true"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_alignParentStart="true" />-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginLeft="@dimen/margin_10"
                        android:orientation="vertical"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true">




                        <!--<RelativeLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content">-->

                        <!--<android.support.design.widget.TextInputLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--app:hintTextAppearance="@style/FormTextInputLayou"-->
                        <!--android:theme="@style/FormTextInputLayoutTheme">-->

                        <!--<EditText-->
                        <!--android:id="@+id/edit_username"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:hint="@string/user_name"-->
                        <!--android:inputType="text"-->
                        <!--android:singleLine="true"-->
                        <!--android:drawableLeft="@drawable/user_icon"-->
                        <!--android:drawableStart="@drawable/user_icon"-->
                        <!--android:drawablePadding="@dimen/margin_10"-->
                        <!---->
                        <!--android:textColorHint="@color/colorPrimary"-->
                        <!--android:textSize="@dimen/font_16"/>-->

                        <!--</android.support.design.widget.TextInputLayout>-->

                        <!--</RelativeLayout>-->

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/FormTextInputLayou"
                        android:theme="@style/FormTextInputLayoutTheme"
                        >

                        <EditText
                            android:id="@+id/edit_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:inputType="text"
                            android:singleLine="true"


                            android:textColorHint="@color/colorPrimary"
                            android:textSize="@dimen/font_16"/>

                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/FormTextInputLayou"
                        android:theme="@style/FormTextInputLayoutTheme"
                        >

                        <EditText
                            android:id="@+id/edit_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            android:inputType="text"
                            android:singleLine="true"


                            android:textColorHint="@color/colorPrimary"
                            android:textSize="@dimen/font_16"/>

                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

                <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:hintTextAppearance="@style/FormTextInputLayou"-->
                <!--android:theme="@style/FormTextInputLayoutTheme"-->
                <!--&gt;-->

                <!--<EditText-->
                <!--android:id="@+id/edit_com_password"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/confirm_password"-->
                <!--android:inputType="textPassword"-->
                <!--android:singleLine="true"-->
                <!--android:drawableLeft="@drawable/confirm_password_icon"-->
                <!--android:drawableStart="@drawable/confirm_password_icon"-->
                <!--android:drawablePadding="@dimen/margin_10"-->
                <!---->
                <!--android:textColorHint="@color/colorPrimary"-->
                <!--android:textSize="@dimen/font_16"/>-->

                <!--</android.support.design.widget.TextInputLayout>-->

                <!--</RelativeLayout>-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:layout_marginLeft="@dimen/margin_5"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_16"
                        android:layout_marginBottom="10dp"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:layout_marginRight="@dimen/margin_20"
                            android:textColor="@color/colorPrimary"
                            />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textColor="@color/colorPrimary"
                            />
                    </RadioGroup>



                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/FormTextInputLayou"
                        android:theme="@style/FormTextInputLayoutTheme">

                        <EditText
                            android:id="@+id/edit_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:inputType="text"
                            android:singleLine="true"


                            android:textColorHint="@color/colorPrimary"
                            android:textSize="@dimen/font_16"
                            android:imeOptions="actionDone"/>

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/FormTextInputLayou"
                        android:theme="@style/FormTextInputLayoutTheme">

                        <EditText
                            android:id="@+id/edit_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city"
                            android:inputType="number"
                            android:singleLine="true"
                            android:textColorHint="@color/colorPrimary"
                            android:textSize="@dimen/font_16"
                            android:imeOptions="actionDone"/>

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>


                <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--&gt;-->

                <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:hintTextAppearance="@style/FormTextInputLayou"-->
                <!--android:theme="@style/FormTextInputLayoutTheme">-->

                <!--<EditText-->
                <!--android:id="@+id/edit_country_code"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/country"-->
                <!--android:inputType="number"-->
                <!--android:singleLine="true"-->

                <!---->
                <!--android:textColorHint="@color/colorPrimary"-->
                <!--android:textSize="@dimen/font_16"-->
                <!--android:imeOptions="actionDone"-->
                <!--android:focusable="false"-->
                <!--/>-->

                <!--</android.support.design.widget.TextInputLayout>-->

                <!--</RelativeLayout>-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/FormTextInputLayou"
                        android:theme="@style/FormTextInputLayoutTheme">

                        <EditText
                            android:id="@+id/edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"

                            android:textColorHint="@color/colorPrimary"
                            android:textSize="@dimen/font_16"/>

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>






            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/layout_info_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/height_40"
        android:visibility="gone">

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:textSize="@dimen/font_18"
            android:text=""
            android:textAlignment="center"
            android:layout_centerInParent="true">
        </TextView>

    </RelativeLayout>
    <!--<include layout="@layout/notify_alert"></include>-->




    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        app:fabSize="normal"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="10dp"
        android:src="@drawable/ic_edit_white_24dp"
        />


</RelativeLayout>